--- a/app/templates/make-change.html
+++ b/app/templates/make-change.html
@@ -10,7 +10,7 @@
       <div id="logo-header">
         <img src="https://fusionauth.io/cdn/samplethemes/changebank/changebank.svg" />
         <div class="h-row">
-          <p class="header-email"></p>
+          <p class="header-email">Welcome: </p>
           <a class="button-lg" href="/logout">Logout</a>
         </div>
       </div>
@@ -41,11 +41,8 @@
     </div>
 
     <script>
-      // Snag cookie user data
-      const user = JSON.parse(decodeURIComponent(document.cookie.split('; ').filter(c => c.includes('userDetails')).at(0).split('=').at(-1)).replace('j:', ''))
-      document.querySelector('.header-email').innerHTML = user.email;
-
       const makeChange = async (e) => {
+        e.stopPropagation();
         e.preventDefault();
 
         const resp = await (await fetch('/make-change', {
