--- a/app/templates/make-change.html
+++ b/app/templates/make-change.html
@@ -1,16 +1,38 @@
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>FusionAuth Start Here Application | Make Change</title>
   <link rel="stylesheet" href="/static/css/changebank.css">
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const id = JSON.parse(decodeURIComponent(document.cookie.split("; ").find((row) => row.startsWith("id="))?.split("=")[1]));
+      document.querySelector('.header-email').innerHTML = `Welcome: ${id.given_name} (${id.email})`;
+    });
+
+    const makeChange = async (e) => {
+      e.stopPropagation();
+      e.preventDefault();
+
+      const resp = await (await fetch('/make-change', {
+        method: 'POST',
+        body: new URLSearchParams(new FormData(e.currentTarget)),
+        headers: {
+          "Content-Type": "application/x-www-form-urlencoded",
+        },
+      })).json();
+      const result = JSON.parse(resp);
+      result.error ? document.querySelector('.error-message').innerHTML = result.error : document.querySelector('.error-message').innerHTML = '';
+      document.querySelector('.change-message').innerHTML = result.message;
+    }
+  </script>
 </head>
 <body>
   <div id="page-container">
     <div id="page-header">
       <div id="logo-header">
-        <img src="https://fusionauth.io/cdn/samplethemes/changebank/changebank.svg" />
+        <img src="https://fusionauth.io/cdn/samplethemes/changebank/changebank.svg" alt="Changebank"/>
         <div class="h-row">
-          <p class="header-email">Welcome: </p>
+          <p class="header-email"></p>
           <a class="button-lg" href="/logout">Logout</a>
         </div>
       </div>
@@ -39,23 +61,6 @@
         </div>
       </div>
     </div>
-
-    <script>
-      const makeChange = async (e) => {
-        e.stopPropagation();
-        e.preventDefault();
-
-        const resp = await (await fetch('/make-change', {
-          method: 'POST',
-          body: new URLSearchParams(new FormData(e.currentTarget)),
-          headers: {
-              "Content-Type": "application/x-www-form-urlencoded",
-          },
-        })).json();
-        const result = JSON.parse(resp);
-        result.error ? document.querySelector('.error-message').innerHTML = result.error : document.querySelector('.error-message').innerHTML = '';
-        document.querySelector('.change-message').innerHTML = result.message;
-      }
-    </script>
+  </div>
 </body>
 </html>
