--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -26,8 +26,8 @@
       <!-- Application page -->
       <div class="column-container">
         <div class="app-container">
-          <h3>Your balance</h3>
-          <div class="balance">$0.00</div>
+          <h3>Admin area</h3>
+          <div class="balance">Restricted access!</div>
         </div>
       </div>
     </div>
