Initial tag testing and fix of some unnecessary code

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,12 @@
 <body>
   <div id="page-container">
     <div id="page-header">
+      <!-- tag::login -->
       <div id="logo-header">
         <img src="https://fusionauth.io/cdn/samplethemes/changebank/changebank.svg" />
         <a class="button-lg" href="/login">Login</a>
       </div>
+      <!-- end::login -->
 
       <div id="menu-bar" class="menu-bar">
         <a class="menu-link">About</a>
