--- a/templates/account.html
+++ b/templates/account.html
@@ -10,10 +10,12 @@
     <div id="page-header">
       <div id="logo-header">
         <img src="https://fusionauth.io/cdn/samplethemes/changebank/changebank.svg" alt="Changebank"/>
+        <!-- tag::logout -->
         <div class="h-row">
           <p class="header-email"></p>
           <a class="button-lg" href="/logout">Logout</a>
         </div>
+        <!-- end::logout -->
       </div>
 
       <div id="menu-bar" class="menu-bar">
